# policy_doctor

./: .gitignore  .gitleaks.toml  .gitmodules  CLAUDE.md  CORL_CODEBASE_ACTION_PLAN.md  CORL_PLAN.md  ENAP Implementation Guide.md  PLAN_monitoring_visualizer.md  README.md  REFACTOR_FINDINGS.md  REFACTOR_PLAN.md  conda_environment_dagger_macos.yaml  environment.yaml  environment_mimicgen.yaml  environment_mimicgen_torch2.yaml  environment_policy_doctor.yaml  environment_robocasa.yaml  pyproject.toml  requirements_policy_doctor.txt  run_tests.py
deploy/: .dockerignore  .env.example  .gitignore  DEPLOY_PLAN.md  Dockerfile  README.md  collect_artifacts.sh  create_vm.sh  deploy_both.sh  deploy_gcp.sh  deploy_gcp_vm.sh  deploy_local.sh  deploy_study_stack.sh  docker-compose.tls.yml  docker-compose.tunnel.yml  docker-compose.yml  init_letsencrypt.sh  push_deploy.sh  requirements.txt  setup_data_disk.sh  sync_from_dev_and_deploy.sh  sync_repo.sh
deploy/cloudflared/: config.yml.example
docs/: ARCHITECTURE.md  DAGGER_GUIDE.md  E2_agents.md  constrained_generation_results.md  data_support.md  droid_inference.md  droid_robot_setup.md  experiment_log_failure_targeting_may11.md  graph_evaluation.md  graph_simplification_brainstorm.md  kendama_retraining.md  mimicgen_budget_sweep_apr25.md  mimicgen_budget_sweep_apr26.md  mimicgen_coffee_prep_d1_may18.md  mimicgen_data_generation_parameters.md  mimicgen_failure_targeting.md  mimicgen_kitchen_threading_tpa_d1_may20.md  mimicgen_pipeline_speedup_plan.md  mimicgen_scale_up_audit.md  mimicgen_seed_selection_apr23.md  monitoring.md  operator_e2_quickstart.md  simplification_findings.md  window_stride_sweep.md
docs/experiments/: experiment_e1_cluster_coherence.md  experiment_e2_agent_proposals.md  experiment_e2_critical_findings.md  k_sweep_may14.md  k_sweep_may14_table.tex  mimicgen_budget_rep_sweep_howto.md  pi05_libero_behavior_graphs.md
docs/k_sweep_results/: _findings.md  best_K_table.json  k_sweep_summary.json
docs/rollout_budget_results/: _findings.md  budget_summary.json
docs/simplification_results/: _summary.md  lift_mh_jan26__policy_emb_bottleneck_plan_t0_w5_s1_seed0_kmeans_k15.json  lift_mh_jan26__policy_emb_bottleneck_plan_t0_w5_s1_seed0_kmeans_k5.json  square_mh_feb5__policy_emb_bottleneck_plan_t0_w5_s1_seed0_kmeans_k15.json  square_mh_feb5__policy_emb_bottleneck_plan_t0_w5_s1_seed0_kmeans_k5.json  transport_mh_jan28__policy_emb_bottleneck_plan_t0_w5_s1_seed0_kmeans_k15.json  transport_mh_jan28__policy_emb_bottleneck_plan_t0_w5_s1_seed0_kmeans_k5.json
docs/specs/: decouple_task_config_from_iv.md
policy_doctor/: __init__.py  _env.py  config.py  paths.py  spacemouse_hid.py
policy_doctor/analysis/: policy_comparison.py
policy_doctor/behaviors/: __init__.py  behavior_graph.py  behavior_values.py  clustering.py  clustering_temporal.py  data_support.py  graph_matching.py  graph_simplification.py  select_K.py
policy_doctor/computations/: __init__.py  embeddings.py  explanations.py  slice_influence.py
policy_doctor/configs/: compare_config.yaml  config.yaml  dagger_run.yaml  lift_mh_jan18.yaml  lift_mh_jan26.yaml  pi05_libero_goal.yaml  pi05_libero_object.yaml  pi05_libero_spatial.yaml  square_mh_apr23_mimicgen_pipeline.yaml  square_mh_feb15.yaml  square_mh_feb5.yaml  square_mh_may11_mimicgen_pipeline.yaml  square_mimicgen_d1_60.yaml  transport_mh_jan28.yaml  transport_mh_mar27.yaml
policy_doctor/curation/: __init__.py  attribution.py  config.py
policy_doctor/curation_pipeline/: __init__.py  base_step.py  config.py  diffusion_overrides.py  paths.py  pipeline.py  runner.py  step_group.py  wandb_utils.py
policy_doctor/data/: __init__.py  adapters.py  aggregation.py  backing.py  clustering_embeddings.py  clustering_loader.py  curation_eval_scan.py  dataset_episode_ends.py  influence_loader.py  interfaces.py  path_utils.py  slice_representations.py  structures.py
policy_doctor/datagen/: __init__.py
policy_doctor/enap/: __init__.py  extended_l_star.py  graph_adapter.py  perception.py  pmm.py  residual_policy.py  rnn_encoder.py
policy_doctor/envs/: __init__.py  dagger_config.py  dagger_runner.py  data_collection_config.py  droid_env.py  droid_policy_wrappers.py  droid_runner.py  e2_runner.py  intervention_device.py  macos_quiet.py  policy_server.py  policy_wrappers.py  robocasa_dagger_env.py  robomimic_dagger_env.py  visualization.py  viz_server.py
policy_doctor/experiment/: __init__.py  experiment.py  paths.py
policy_doctor/influence/: __init__.py  annotations.py  clustering_io.py  frames.py  lazy_hdf5.py  loader.py  path_helpers.py
policy_doctor/mimicgen/: __init__.py  chained_warp_generator.py  eef.py  (+6 more)
scripts/: aggregate_sweep_results.py  analyze_e1_confusion_structure.py  batch_data_support.py  benchmark_compile_tf32.py  benchmark_simplification.py  build_alt_clustering.py  build_k_sweep_clusterings.py  build_kendama_clustering.py  check_gemini_tool_image.py  cluster_kendama_policy_embeddings.py  cluster_kendama_rollouts.py  cluster_pi05_libero.py  compare_graph_methods.py  compute_clustering_metrics.py  convert_droid_hdf5_debug.py  convert_droid_to_robomimic.py  convert_lerobot_to_robomimic_hdf5.py  convert_rollout_to_mimicgen_seed.py  create_cupid_torch25.sh  create_cupid_torch25_from_yaml.sh  eval_lift_low_w.py  export_e1_report.py  export_e2_report.py  export_mimicgen_report.py  generate_coffee_prep_d1_pool.py  install_cupid_env.sh  install_droid_zed_deps.sh  install_policy_doctor_env.sh  integration_test_e2_agent.py  kendama_clustering_lib.py  launch_500_rollout_eval.sh  launch_500_rollout_eval_parallel.sh  markov_rnn_experiment.py  merge_droid_hdf5.py  merge_eval_chunks.py  mimicgen_link_robosuite_for_playback.sh  monitor_offline.py  monitor_online.py  openpi_embedding_extraction.patch  plot_gamma_selection.py  (+56 more)
sweep_specs/: kendama_baseline250_policy_emb.yaml  kendama_baseline250_state.yaml  kendama_baseline250_state_action.yaml  transport_r512_alt_clustering.yaml
tests/: __init__.py  conftest.py  test_env_dispatch.py  test_mimicgen_seed_abstractions.py
(+562 files in other folders)
