[project]
name = "policy-doctor"
version = "0.1.0"
description = "Influence-based policy analysis and curation"
readme = "README.md"
requires-python = ">=3.10"

# Core dependencies needed for any policy_doctor code path to import.
# Tight bounds avoided — uv.lock pins exact versions reproducibly.
dependencies = [
    "numpy>=1.23,<2.1",
    "scipy>=1.9",
    "h5py>=3.7",
    "scikit-learn>=1.0",
    "pyyaml>=6.0",
    "pandas>=1.5",
    "tqdm>=4.60",
    "omegaconf>=2.2",
    "hydra-core>=1.2",
]

[project.optional-dependencies]
# Analysis: orchestration, clustering, behavior graph, Streamlit, attribution
# post-processing. No simulator deps. The default env for everything that
# doesn't touch robosuite/mimicgen.
analysis = [
    "matplotlib>=3.5",
    "plotly>=5.0",
    "streamlit>=1.30",
    "umap-learn>=0.5",
    "hdbscan>=0.8",
    "networkx>=3.0",
    "einops>=0.4",
    "click>=8.0",
    "imageio>=2.20",
    "imageio-ffmpeg>=0.4",
    "pillow>=9.0",
    "pyvis>=0.3",
    "transformers>=4.30",
    "diffusers>=0.20",
    "torch>=2.0",
    "torchvision",
    "wandb>=0.15",
    "google-generativeai>=0.5",
    "anthropic>=0.30",
    "seaborn>=0.13",
    "ipython>=8.0",
]

dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.0",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["policy_doctor*"]

[tool.setuptools.package-data]
policy_doctor = ["configs/**/*.yaml", "configs/**/*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60
